<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_televisor"
            android:icon="@drawable/television"
            android:title="@string/string_televisor"
            android:visible="false"/>
        <item
            android:id="@+id/nav_luces"
            android:icon="@drawable/luces"
            android:title="@string/string_luces" />
        <item
            android:id="@+id/nav_proyector"
            android:icon="@drawable/proyector"
            android:title="@string/string_proyector" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/power"
            android:title="@string/string_salir" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
