<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".luces"
    tools:showIn="@layout/app_bar_luces">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/luz1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/luz_1"
                android:scaleType="fitXY"
                android:text="@string/luz_1"
                android:textAlignment="center"
                app:srcCompat="@drawable/foco_vector" />

            <ImageButton
                android:id="@+id/luz2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/luz_2"
                app:srcCompat="@drawable/foco_vector" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/textView_luz1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/luz_1"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@string/luz_1" />

            <Space
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView_luz2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/luz_2"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@string/luz_2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/luz3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/luz_3"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/foco_vector" />

            <ImageButton
                android:id="@+id/luz4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/luz_4"
                app:srcCompat="@drawable/foco_vector" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="13dp">

            <TextView
                android:id="@+id/textView_luz3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/luz_3"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@string/luz_3" />

            <Space
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView_luz4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/luz_4"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@string/luz_4" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>